# ARCIS-ML

./: .gitignore  PROJECT_ORGANIZATION_PLAN.md  PROJECT_SUMMARY.md  README.md  flask_server.py  inference_tflite.py  jetson_inference.py  pyproject.toml  requirements.txt  setup.py  yolov8n-ultralight.yaml
ARCIS_Redis_System/: DEPLOYMENT_GUIDE.md  Dockerfile.api  Dockerfile.cloud  Dockerfile.jetson  README.md  docker-compose.yml  env.example  raspberry_pi_client.py  requirements_api.txt  requirements_cloud.txt  requirements_jetson.txt  train_weapon_detection_redis.py
Documentation/: GITHUB_UPLOAD_GUIDE.md  README.md  README_edge_training.md  README_merged_dataset.md  transfer_instructions.md
Original_ARCIS_System/: show_yolo_parameters.py
Utilities/: delete_duplicate_files.py  test_model.py  verify_dataset_classes.py
assets/audio/Audio_Assets/: README.md
data/: README.md
data/raw/newDatasets/dataset_1/: README.dataset.txt  README.roboflow.txt
data/raw/newDatasets/dataset_10/: README.dataset.txt  README.roboflow.txt
data/raw/newDatasets/dataset_10/train/labels/: -13-36-17-_jpg.rf.f045c2a91cfcf27e6dcc6bc1eb82f624.txt  -13-36-52-_jpg.rf.f0f6a3a6fd4ff95b0c509227cd201faa.txt  -13-40-50-_jpg.rf.9350ed2d073003869468093b24ca00cd.txt  -13-43-16-_jpg.rf.0c40478d50659f2179b01bc7ee94554a.txt  -221_-2-_jpg.rf.25a9719b47bf8a5175b1407a70984a9a.txt  (+2127 more)
data/raw/newDatasets/dataset_2/: README.dataset.txt  README.roboflow.txt
data/raw/newDatasets/dataset_3/: README.dataset.txt  README.roboflow.txt
data/raw/newDatasets/dataset_5/: README.dataset.txt  README.roboflow.txt
data/raw/newDatasets/dataset_6/: README.dataset.txt  README.roboflow.txt
data/raw/newDatasets/dataset_7/: README.dataset.txt  README.roboflow.txt
data/raw/newDatasets/dataset_8/: README.dataset.txt  README.roboflow.txt
data/raw/newDatasets/dataset_9/: README.dataset.txt  README.roboflow.txt
deployment/ARCIS_Redis_System/: arcis_api_service.py  arcis_cloud_service.py  arcis_redis_integration.py
deployment/edge/multi_edge_deployment/: README.md  check_onnx.py  export_to_onnx.py
deployment/edge/multi_edge_deployment/jetson_nano/: JETSON_OPTIMIZATION.md  export_to_jetson.py  jetson_inference.py
deployment/edge/multi_edge_deployment/raspberry_pi/: validation_for_pi.py
docs/Documentation/: AMD_GPU_TRAINING.md  L76K_GPS_Setup_Guide.md  README_Dataset_Merger.md  README_merged_dataset.md
docs/reports/: TRAINING_PROGRESS_REPORT.txt
mobilenet_ssd_model/: README.md  class_names.txt  raspi_inference.py
models/: README.md
models/trained/ssd/weapon_detection_SSD/: README.md  requirements.txt  run_pipeline.sh
models/trained/ssd/weapon_detection_SSD/datasets/: create_merged_ssd_dataset.py  merged_dataset  merged_dataset_75_15  merged_ssd_dataset
models/trained/ssd/weapon_detection_SSD/inference/: readme.md  test_inference.py  tflite_info.py
models/trained/ssd/weapon_detection_SSD/models/: create_mobilenet_ssd_model.py  download_pretrained_model.py
models/trained/ssd/weapon_detection_SSD/training/: train_fixed_v2.py  train_ssd_model.py  train_ssd_pipeline.sh  train_ssd_small.py  train_with_dataset_fixed.py
multi_edge_deployment/jetson_nano/: train_for_jetson.py  yolov8n-ultralight.yaml
multi_edge_deployment/jetson_nano/runs/detect/jetson/: args.yaml  results.csv
multi_edge_deployment/jetson_nano/runs/detect/jetson_ultralight/: args.yaml  results.csv
multi_edge_deployment/raspberry_pi/: export_to_raspi.py  train_for_cloud_raspi.py
multi_edge_deployment/raspberry_pi/runs/detect/raspiV2/: args.yaml  results.csv
multi_edge_deployment/raspberry_pi/runs/detect/raspi_training_2025-06-15_21-04-45/: args.yaml  results.csv
multi_edge_deployment/raspberry_pi/runs/detect/raspi_training_2025-06-17_14-59-54/: args.yaml  results.csv
multi_edge_deployment/raspberry_pi/runs/detect/raspi_training_2025-06-26_05-38-21/: args.yaml  results.csv
rocm optimized train/: train_with_rocm_fixed.py
src/scripts/: train.py
src/scripts/util_scripts/: merge_datasets.py  raspi_client.py  train_for_jetson.py  train_for_raspi.py  train_forraspi_mobilenet.py
testscripts/: test_rocm_gpu.py  test_rocm_simple.py
tools/scripts/data_processing/Original_ARCIS_System/: DATASET_SELECTION_GUIDE.md  README.md  requirements_gps.txt  test_dataset_selection.py  train_weapon_detection.py  train_weapon_detection_gps.py  verify_setup.py  webcam_inference.py  yolo_hyperparameter_tuner.py
tools/scripts/data_processing/Utilities/: README.md  test_gpu.py  train_yolo.py
tools/scripts/model_conversion/rocm optimized train/: train_with_rocm.py
(+79652 files in other folders)
